Fix spacing between supplementary button label and icon

--- a/packages/core/src/components/button/button.css
+++ b/packages/core/src/components/button/button.css
@@ -119,6 +119,20 @@ input[type="submit"].hds-button {
   margin: 0 var(--spacing-2-xs);
 }
 
+/* supplementary with right icon */
+.hds-button--supplementary .hds-button__label:first-child {
+  padding-right: var(--spacing-3-xs);
+}
+/* supplementary with left icon */
+.hds-button--supplementary .hds-icon + .hds-button__label:last-child {
+  padding-left: var(--spacing-3-xs);
+}
+/* supplementary with both icons */
+.hds-button--supplementary .hds-icon + .hds-button__label:not(:last-child) {
+  padding-left: var(--spacing-3-xs);
+  padding-right: var(--spacing-3-xs);
+}
+
 /* SMALL */
 .hds-button--small {
   padding: 0;
